allow to update code of a given rule
